--- a/projects/page-builder/src/controls/display-control/display-control.component.html
+++ b/projects/page-builder/src/controls/display-control/display-control.component.html
@@ -4,12 +4,12 @@
       <td><label for="display">Display Type</label></td>
       <td>
         <div class="pi-group">
-          <select [(ngModel)]="display" id="display" (ngModelChange)="update()">
+          <select [(ngModel)]="style.display" id="display" (ngModelChange)="update()">
             @for (option of displayOptions; track option) {
               <option [value]="option.value">{{ option.icon }} &nbsp; {{ option.label }}</option>
             }
           </select>
-          <button class="btn-clear" type="button" (click)="clear(display)">x</button>
+          <button class="btn-clear" type="button" (click)="clear('style.display')">x</button>
         </div>
       </td>
     </tr>
@@ -32,13 +32,17 @@
           <td><label for="flex-direction">Flex Direction</label></td>
           <td>
             <div class="pi-group">
-              <select [(ngModel)]="flexDirection" (ngModelChange)="update()" id="flex-direction">
+              <select
+                [(ngModel)]="style.flexDirection"
+                (ngModelChange)="update()"
+                id="flex-direction"
+              >
                 <option value="row">Row →</option>
                 <option value="row-reverse">Row Reverse ←</option>
                 <option value="column">Column ↓</option>
                 <option value="column-reverse">Column Reverse ↑</option>
               </select>
-              <button class="btn-clear" type="button" (click)="clear(display)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('display')">x</button>
             </div>
           </td>
         </tr>
@@ -47,7 +51,7 @@
           <td><label for="flex-direction">Flex Wrap</label></td>
           <td>
             <div class="pi-group">
-              <select [(ngModel)]="flexWrap" (ngModelChange)="update()">
+              <select [(ngModel)]="style.flexWrap" (ngModelChange)="update()">
                 <option value="nowrap">No Wrap</option>
                 <option value="wrap">Wrap</option>
                 <option value="wrap-reverse">Wrap Reverse</option>
@@ -60,14 +64,18 @@
           <td><label for="justifyContent">Justify Content (Main Axis)</label></td>
           <td>
             <div class="pi-group">
-              <select [(ngModel)]="justifyContent" id="justifyContent" (ngModelChange)="update()">
+              <select
+                [(ngModel)]="style.justifyContent"
+                id="justifyContent"
+                (ngModelChange)="update()"
+              >
                 @for (option of justifyOptions; track option) {
                   <option [value]="option.value">
                     {{ option.icon }} &nbsp; {{ option.label }}
                   </option>
                 }
               </select>
-              <button class="btn-clear" type="button" (click)="clear(justifyContent)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('justifyContent')">x</button>
             </div>
           </td>
         </tr>
@@ -76,14 +84,14 @@
           <td><label for="alignItems">Align Items (Cross Axis)</label></td>
           <td>
             <div class="pi-group">
-              <select [(ngModel)]="alignItems" id="alignItems" (ngModelChange)="update()">
+              <select [(ngModel)]="style.alignItems" id="alignItems" (ngModelChange)="update()">
                 @for (option of alignOptions; track option) {
                   <option [value]="option.value">
                     {{ option.icon }} &nbsp; {{ option.label }}
                   </option>
                 }
               </select>
-              <button class="btn-clear" type="button" (click)="clear(alignItems)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('alignItems')">x</button>
             </div>
           </td>
         </tr>
@@ -92,14 +100,14 @@
           <td><label for="alignContent">Align Content (Multi-line)</label></td>
           <td>
             <div class="pi-group">
-              <select [(ngModel)]="alignContent" id="alignContent" (ngModelChange)="update()">
+              <select [(ngModel)]="style.alignContent" id="alignContent" (ngModelChange)="update()">
                 @for (option of alignContentOptions; track option) {
                   <option [value]="option.value">
                     {{ option.icon }} &nbsp; {{ option.label }}
                   </option>
                 }
               </select>
-              <button class="btn-clear" type="button" (click)="clear(alignContent)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('alignContent')">x</button>
             </div>
           </td>
         </tr>
@@ -111,11 +119,11 @@
               <input
                 id="gap"
                 type="text"
-                [(ngModel)]="gap"
+                [(ngModel)]="style.gap"
                 (ngModelChange)="update()"
                 placeholder="e.g., 10px"
               />
-              <button class="btn-clear" type="button" (click)="clear(gap)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('gap')">x</button>
             </div>
           </td>
         </tr>
@@ -126,11 +134,11 @@
               <input
                 id="rowGap"
                 type="text"
-                [(ngModel)]="rowGap"
+                [(ngModel)]="style.rowGap"
                 (ngModelChange)="update()"
                 placeholder="e.g., 10px"
               />
-              <button class="btn-clear" type="button" (click)="clear(rowGap)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('rowGap')">x</button>
             </div>
           </td>
         </tr>
@@ -141,11 +149,11 @@
               <input
                 id="columnGap"
                 type="text"
-                [(ngModel)]="columnGap"
+                [(ngModel)]="style.columnGap"
                 (ngModelChange)="update()"
                 placeholder="e.g., 10px"
               />
-              <button class="btn-clear" type="button" (click)="clear(columnGap)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('columnGap')">x</button>
             </div>
           </td>
         </tr>
@@ -157,11 +165,11 @@
               <input
                 id="flexGrow"
                 type="text"
-                [(ngModel)]="flexGrow"
+                [(ngModel)]="style.flexGrow"
                 (ngModelChange)="update()"
                 placeholder="e.g., 10px"
               />
-              <button class="btn-clear" type="button" (click)="clear(flexGrow)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('flexGrow')">x</button>
             </div>
           </td>
         </tr>
@@ -173,11 +181,11 @@
               <input
                 id="flexShrink"
                 type="text"
-                [(ngModel)]="flexShrink"
+                [(ngModel)]="style.flexShrink"
                 (ngModelChange)="update()"
                 placeholder="e.g., 10px"
               />
-              <button class="btn-clear" type="button" (click)="clear(flexShrink)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('flexShrink')">x</button>
             </div>
           </td>
         </tr>
@@ -189,11 +197,11 @@
               <input
                 id="flexBasis"
                 type="text"
-                [(ngModel)]="flexBasis"
+                [(ngModel)]="style.flexBasis"
                 (ngModelChange)="update()"
                 placeholder="e.g., 10px"
               />
-              <button class="btn-clear" type="button" (click)="clear(flexBasis)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('flexBasis')">x</button>
             </div>
           </td>
         </tr>
@@ -205,11 +213,11 @@
               <input
                 id="order"
                 type="text"
-                [(ngModel)]="order"
+                [(ngModel)]="style.order"
                 (ngModelChange)="update()"
                 placeholder="e.g., 10px"
               />
-              <button class="btn-clear" type="button" (click)="clear(order)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('order')">x</button>
             </div>
           </td>
         </tr>
@@ -218,14 +226,14 @@
           <td><label for="alignSelf">Align Self</label></td>
           <td>
             <div class="pi-group">
-              <select [(ngModel)]="alignSelf" id="alignSelf" (ngModelChange)="update()">
+              <select [(ngModel)]="style.alignSelf" id="alignSelf" (ngModelChange)="update()">
                 @for (option of alignSelfOptions; track option) {
                   <option [value]="option.value">
                     {{ option.icon }} &nbsp; {{ option.label }}
                   </option>
                 }
               </select>
-              <button class="btn-clear" type="button" (click)="clear(alignSelf)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('alignSelf')">x</button>
             </div>
           </td>
         </tr>
@@ -265,11 +273,11 @@
               <input
                 id="gridTemplateColumns"
                 type="text"
-                [(ngModel)]="gridTemplateColumns"
+                [(ngModel)]="style.gridTemplateColumns"
                 (ngModelChange)="update()"
                 placeholder="e.g., repeat(3, 1fr)"
               />
-              <button class="btn-clear" type="button" (click)="clear(gridTemplateColumns)">
+              <button class="btn-clear" type="button" (click)="clear('gridTemplateColumns')">
                 x
               </button>
             </div>
@@ -290,11 +298,11 @@
               <input
                 id="gridTemplateRows"
                 type="text"
-                [(ngModel)]="gridTemplateRows"
+                [(ngModel)]="style.gridTemplateRows"
                 (ngModelChange)="update()"
                 placeholder="e.g., auto 1fr auto"
               />
-              <button class="btn-clear" type="button" (click)="clear(gridTemplateRows)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('gridTemplateRows')">x</button>
             </div>
           </td>
         </tr>
@@ -307,11 +315,13 @@
                 rows="3"
                 id="gridTemplateAreas"
                 type="text"
-                [(ngModel)]="gridTemplateAreas"
+                [(ngModel)]="style.gridTemplateAreas"
                 (ngModelChange)="update()"
                 placeholder="e.g., 'header header' 'sidebar main' 'footer footer'"
               ></textarea>
-              <button class="btn-clear" type="button" (click)="clear(gridTemplateAreas)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('gridTemplateAreas')">
+                x
+              </button>
             </div>
           </td>
         </tr>
@@ -323,11 +333,11 @@
               <input
                 id="gridAutoColumns"
                 type="text"
-                [(ngModel)]="gridAutoColumns"
+                [(ngModel)]="style.gridAutoColumns"
                 (ngModelChange)="update()"
                 placeholder="e.g., 1fr"
               />
-              <button class="btn-clear" type="button" (click)="clear(gridAutoColumns)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('gridAutoColumns')">x</button>
             </div>
           </td>
         </tr>
@@ -339,11 +349,11 @@
               <input
                 id="gridAutoRows"
                 type="text"
-                [(ngModel)]="gridAutoRows"
+                [(ngModel)]="style.gridAutoRows"
                 (ngModelChange)="update()"
                 placeholder="e.g., 1fr"
               />
-              <button class="btn-clear" type="button" (click)="clear(gridAutoRows)">x</button>
+              <button class="btn-clear" type="button" (click)="clear('gridAutoRows')">x</button>
             </div>
           </td>
         </tr>
