--- a/projects/page-builder/src/lib/import-dialog/preview-import-tree/preview-import-tree.component.html
+++ b/projects/page-builder/src/lib/import-dialog/preview-import-tree/preview-import-tree.component.html
@@ -26,7 +26,7 @@
           <pre>{{ item.options?.attributes | json }}</pre>
         </div>
       }
-      @if (item.style) {
+      <!-- @if (item.style) {
         <div>
           <strong>Style:</strong>
           <pre>{{ item.style }}</pre>
@@ -35,7 +35,7 @@
 
       @if (!item.options && !item.style) {
         <div>No style and options</div>
-      }
+      } -->
     </div>
   }
   @if (isExpanded && item.children && item.children.length > 0) {
