--- a/projects/page-builder/src/components/class-selector/class-selector.component.html
+++ b/projects/page-builder/src/components/class-selector/class-selector.component.html
@@ -33,7 +33,7 @@
     } @else {
       <div class="pi-group">
         <select name="classlist" (change)="onAddClass($event)">
-          @for (item of cls.availableClasses; track $index) {
+          @for (item of availableClasses; track $index) {
             <option [value]="item">{{ item }}</option>
           }
         </select>
