--- a/projects/ngx-page-builder/src/lib/toolbar/toolbar.component.html
+++ b/projects/ngx-page-builder/src/lib/toolbar/toolbar.component.html
@@ -90,7 +90,7 @@
   </button>
 }
 
-@if (toolbarConfig?.showOpenButton) {
+@if (toolbarConfig?.showSaveButton) {
   <button (click)="onSave()" title="Save">
     <svg Icon="assets/icons/save.svg"></svg>
   </button>
