--- a/projects/ngx-page-builder/src/components/block-selector/block-selector.component.scss
+++ b/projects/ngx-page-builder/src/components/block-selector/block-selector.component.scss
@@ -20,6 +20,7 @@
     align-items: center;
     min-width: 200px;
     gap: 4px;
+    z-index: 100;
     &.bottom {
       top: auto;
       bottom: -34px;
