--- a/projects/ngx-page-builder/src/controls/spacing-control/spacing-control.component.html
+++ b/projects/ngx-page-builder/src/controls/spacing-control/spacing-control.component.html
@@ -9,6 +9,7 @@
           *ngTemplateOutlet="
             spacingControl;
             context: {
+              marginOrPadding: margin,
               spacing: margin[direction.key],
               key: 'margin',
               direction: direction.key,
@@ -31,6 +32,7 @@
           *ngTemplateOutlet="
             spacingControl;
             context: {
+              marginOrPadding: padding,
               spacing: padding[direction.key],
               key: 'padding',
               direction: direction.key,
@@ -42,7 +44,13 @@
   </tbody>
 </table>
 
-<ng-template #spacingControl let-spacing="spacing" let-key="key" let-direction="direction">
+<ng-template
+  #spacingControl
+  let-marginOrPadding="marginOrPadding"
+  let-spacing="spacing"
+  let-key="key"
+  let-direction="direction"
+>
   @if (spacing) {
     <tr>
       <td>
@@ -62,7 +70,7 @@
           />
           <select
             [(ngModel)]="spacing.unit"
-            (ngModelChange)="onChangeUnit(spacing, direction)"
+            (ngModelChange)="onChangeUnit(marginOrPadding, direction)"
             [attr.name]="'unit-' + direction"
             class="unit"
           >
