--- a/projects/ngx-page-builder/src/sources/column/column.component.html
+++ b/projects/ngx-page-builder/src/sources/column/column.component.html
@@ -1,5 +1,5 @@
 <div class="flex-row" #colContainer></div>
-@if (pageBuilder.mode == 'Edit') {
+@if (editMode) {
   <div class="action-container">
     <button (click)="addColumnToFirst()" type="button" class="btn-add-column">
       <svg Icon="assets/icons/plus.svg"></svg>
