store as plugin

--- a/projects/ngx-page-builder/src/components/block-settings/block-settings.component.html
+++ b/projects/ngx-page-builder/src/components/block-settings/block-settings.component.html
@@ -20,5 +20,9 @@
     } @else {
       <p>No settings available.</p>
     }
+
+    @if (enableExportAsPlugin) {
+      <button type="button" class="btn" (click)="exportBlockAsPlugin()">Export as plugin</button>
+    }
   }
 </div>
