--- a/projects/ngx-page-builder/src/lib/page-builder.scss
+++ b/projects/ngx-page-builder/src/lib/page-builder.scss
@@ -26,7 +26,7 @@
   background-color: var(--tools-bg);
   color: var(--tools-fg);
   max-height: calc(100vh - var(--topbar-height));
-  overflow-y: auto;
+  overflow-y: scroll;
   overflow-x: hidden;
   .tool {
     padding: 6px;
