--- a/projects/demo/src/app/builder/builder.component.html
+++ b/projects/demo/src/app/builder/builder.component.html
@@ -1,5 +1,4 @@
-<button (click)="getData()">get data</button>
-<a routerLink="/preview" target="_blank">preview</a>
+<button (click)="getData()">get data</button> ><a routerLink="/preview" target="_blank">preview</a>
 <ngx-page-builder
   #pageBuilder
   [dynamicData]="dynamicData"
