--- a/projects/ngx-page-builder/src/components/block-layouts/block-layouts.component.scss
+++ b/projects/ngx-page-builder/src/components/block-layouts/block-layouts.component.scss
@@ -39,6 +39,7 @@ ul.tree-list {
     }
     &.active > div {
       background-color: var(--active-button);
+      color: var(--active-button-fg);
     }
   }
 }
