--- a/projects/ngx-page-builder/src/components/class-selector/class-selector.component.scss
+++ b/projects/ngx-page-builder/src/components/class-selector/class-selector.component.scss
@@ -20,6 +20,7 @@
     }
     &.active {
       background-color: var(--active-button);
+      color: var(--active-button-fg);
       border-color: var(--active-button);
       color: #fff;
     }
