--- a/projects/ngx-page-builder/src/lib/toolbar/toolbar.component.scss
+++ b/projects/ngx-page-builder/src/lib/toolbar/toolbar.component.scss
@@ -25,6 +25,7 @@
     &:hover,
     &.active {
       background: var(--active-button);
+      color: var(--active-button-fg);
     }
     svg {
       color: var(--toolbar-fg);
