--- a/projects/ngx-page-builder/src/styles/paper.scss
+++ b/projects/ngx-page-builder/src/styles/paper.scss
@@ -8,6 +8,7 @@
   --letter-height: 279mm;
 
   --active-button: #0040ff;
+  --active-button-fg: #ffffff;
 
   --tools-bg: #282828;
   --toolbar-bg: #353535;
