--- a/projects/ngx-page-builder/src/components/side-config/side-config.component.scss
+++ b/projects/ngx-page-builder/src/components/side-config/side-config.component.scss
@@ -14,6 +14,7 @@
     cursor: pointer;
     &.active {
       background: var(--active-button);
+      color: var(--active-button-fg);
     }
     svg {
       width: 20px;
