--- a/projects/ngx-page-builder/src/components/text-binding/text-binding.component.html
+++ b/projects/ngx-page-builder/src/components/text-binding/text-binding.component.html
@@ -32,5 +32,5 @@
 }
 
 @if (item.isImageTag) {
-  <button type="button" (click)="onChangeSrcImage()">Change Image</button>
+  <button type="button" (click)="onChangeSrcImage()" class="btn">Change Image</button>
 }
