--- a/projects/ngx-page-builder/src/styles/paper.scss
+++ b/projects/ngx-page-builder/src/styles/paper.scss
@@ -1,4 +1,5 @@
 .ngx-page-builder {
+  --mat-dialog-container-max-width: 100%;
   /* page sizes */
   --a4-width: 210mm;
   --a4-height: 290mm; // 297mm;
